# hx-requests-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile.nginx  Dockerfile.prod  Makefile  README.md  default.conf  docker-compose.prod.yml  docker-compose.yml  docker_compose.prod.yaml  manage_file_links.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: settings.py  urls.py
hx_requests_demo/: apps.py  base_views.py  filtersets.py  forms.py  hx_requests.py  views.py
hx_requests_demo/management/commands/: refresh_users.py
hx_requests_demo/static/css/: styles.css
hx_requests_demo/static/js/: base.js
hx_requests_demo/static/py/: create_form.html  hx_requests.py  update_form copy.html  user_list.html  views.py
hx_requests_demo/templates/: base.html  code_display.html  create_form.html  hx_messages.html  modal.html  update_form.html  user_list.html
hx_requests_demo/templatetags/: tags.py
